--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/5.7.3/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/5.7.3/firebase-auth.js"></script>
-    <script defer src="/__/firebase/5.7.3/firebase-firestore.js"></script>
-    <script defer src="/__/firebase/5.7.3/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/5.7.3/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
-  </head>
-  <body>
-    <script src="app.js"></script>
-    <h1 id="heading">Hello Firebase World</h1>
-    <ul>
-      <li id ="first"></li>
-      <li id="second"></li>
-    </ul>
-    <button onclick="googleLogin()">
-      Login with Google
-    </button>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Welcome to Firebase Hosting</title>
 
-    <h1 id="title"></h1>
-    <input onchange="updatePost(event)">
-  </body>
+  <!-- update the version number as needed -->
+  <script defer src="/__/firebase/5.7.3/firebase-app.js"></script>
+  <!-- include only the Firebase features as you need -->
+  <script defer src="/__/firebase/5.7.3/firebase-auth.js"></script>
+  <script defer src="/__/firebase/5.7.3/firebase-firestore.js"></script>
+  <script defer src="/__/firebase/5.7.3/firebase-messaging.js"></script>
+  <script defer src="/__/firebase/5.7.3/firebase-storage.js"></script>
+  <!-- initialize the SDK after all desired features are loaded -->
+  <script defer src="/__/firebase/init.js"></script>
+</head>
+
+<body>
+  <script src="app.js"></script>
+  <h1 id="heading">Hello Firebase World</h1>
+  <ul>
+    <p id="first"></p>
+    <p id="second"></p>
+  </ul>
+  <button onclick="googleLogin()">
+    Login with Google
+  </button>
+
+  <h1 id="title"></h1>
+  <input onchange="updatePost(event)">
+</body>
+
 </html>
