add db search functionality

--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,10 @@
 
 <body>
   <script src="app.js"></script>
-  <h1 id="heading">Hello Firebase World</h1>
-  <ul>
-    <p id="first"></p>
-    <p id="second"></p>
-  </ul>
+  <h1 id="heading">Hello Firebase</h1>
+  <ul id=prodList></ul>
+  <p id="first"></p>
+  <p id="second"></p>
   <button onclick="googleLogin()">
     Login with Google
   </button>
